basic java7 conversions with compat libs